@@ -170,6 +170,9 @@ Documentation
 Tests
 -----
 
+- Issue #18174: ``python -m test --huntrleaks ...`` now also checks for leak of
+  file descriptors. Patch written by Richard Oudkerk.
+
 - Issue #25260: Fix ``python -m test --coverage`` on Windows. Remove the
   list of ignored directories.
 
